# pisshoff

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  rustfmt.toml
.github/workflows/: audit.yml  ci.yml  docker-publish.yml
pisshoff-server/: Cargo.toml  config.toml
pisshoff-server/src/: audit.rs  command.rs  config.rs  file_system.rs  main.rs  server.rs  state.rs
pisshoff-server/src/command/: cat.rs  echo.rs  exit.rs  ls.rs  pwd.rs  scp.rs  uname.rs  whoami.rs
pisshoff-server/src/command/snapshots/: pisshoff_server__command__scp__test__works.snap  pisshoff_server__command__uname__test__-a.snap  pisshoff_server__command__uname__test__-sn --fake.snap  pisshoff_server__command__uname__test__-sn -z.snap  pisshoff_server__command__uname__test__-sn oper.snap  pisshoff_server__command__uname__test__-sn.snap  pisshoff_server__command__uname__test__-snrvmpio.snap  pisshoff_server__command__uname__test__.snap
pisshoff-server/src/subsystem/: mod.rs  sftp.rs  shell.rs
pisshoff-server/src/subsystem/shell/: parser.rs
pisshoff-timescaledb-exporter/: Cargo.toml  config.toml
pisshoff-timescaledb-exporter/migrations/: V1__initial.sql
pisshoff-timescaledb-exporter/src/: config.rs  main.rs
pisshoff-types/: Cargo.toml
pisshoff-types/src/: audit.rs  lib.rs
src/: audit.rs  command.rs  config.rs  main.rs  server.rs
