[package]
name = "pisshoff-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4", features = ["serde"] }
uuid = "1.3"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
